Added v1 select2 support for the list change switch widget

--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -1,9 +1,11 @@
 <!-- begin installer_extra_javascript_widget.tmpl --> 
 
 <!-- jQuery -->
+
 <script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery-1.8.2.min.js"></script>
 <script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery-ui-1.9.1.custom.min.js"></script>
 <script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery.validate.js"></script>
 <script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-dada_mail.js"></script>
+<script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-dada_mail.installer.js"></script>
 	
 <!-- end installer_extra_javascript_widget.tmpl -->
