--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -56,6 +56,10 @@
 	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/colorbox/colorbox.css">
 	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/colorbox/jquery.colorbox-min.js"></script>
 
+	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/select2.css">
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/select2.js"></script>
+
+
 
 </head>
  
