Finishing up the first pass of the new plugin, entering changes into the change log. Good release!

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -699,8 +699,10 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <p><input type="checkbox" name="install_change_list_shortname" id="install_change_list_shortname" value="1"  /><label for="install_change_list_shortname">Change Your List Short Name</label></p> 
 
-
 <p><input type="checkbox" name="install_password_protect_directories" id="install_password_protect_directories" value="1"  /><label for="install_password_protect_directories">Password Protect Directories</label> <span class="alert">Optionally Requires Additional Configuration (cronjob)</span>	</p> 
+
+<p><input type="checkbox" name="install_global_config" id="install_global_config" value="1"  /><label for="install_global_config">Global Config</label></p> 
+
 </fieldset> 
 
 <fieldset> 
