--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -652,6 +652,13 @@ $ADMIN_MENU = [
 #					},
 
 #					{
+#					-Title      => 'Global Configuration',
+#					-Title_URL  => $PLUGIN_URL."/global_config.cgi",
+#					-Function   => 'global_config',
+#					-Activated  => 0,
+#					},
+
+#					{
 #					-Title      => 'Boilerplate Example',
 #					-Title_URL  => $PLUGIN_URL."/boilerplate_plugin.cgi",
 #					-Function   => 'boilerplate',
