--- a/dada/templates/manage_script_screen.tmpl
+++ b/dada/templates/manage_script_screen.tmpl
@@ -132,7 +132,7 @@
  If you find Dada Mail incredibly useful, please support
  <a href="http://dadamailproject.com/purchase/pro.html" target="_blank">The Dada Mail Project.</a></p> 
 
-
+<!-- tmpl_include upgrade_to_pro_dada.tmpl -->
 
 <p>I really appreciate all the support received! Thanks!</p> 
 
@@ -150,8 +150,6 @@
  as well as my personal endeavors, including paying my higher education student loans and continuing as a 
  visual artist. 
 </p>
-
-<hr />
 
 <!-- /tmpl_if --> 
 
@@ -171,7 +169,6 @@
   </a>
  </strong>
 </p>
-<hr />
 
 <h1>
  Join the Dada Mail Project Announcements Mailing List
@@ -183,8 +180,6 @@
  <input type="text"   name="email"  value="<!-- tmpl_var name="list_owner_email" -->" size="24" maxlength="1024" />
  <input type="submit" class="processing" value="Subscribe" />
 </form>
-<hr />
-
 
 <h1>
  License Agreement
@@ -195,9 +190,6 @@
   <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.html" target="_blank">
    GNU Public License v2</a></strong>.
 </p>
-<hr />
-
-
 
 <h1>
 	Dada Mail and Spam
