--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -67,7 +67,7 @@ Current Mass Mailings:
 	      <td> 
 	      <p>
 	       <strong> 
-	        List:
+	        Mailing List:
 	       </strong> 
 	      </p>
 	     </td>
@@ -82,7 +82,7 @@ Current Mass Mailings:
 	<td>
 	 <p>
 	  <strong>
-	   Created
+	   Created:
 	  </strong>
 	 </p>
 	</td> 
@@ -141,7 +141,7 @@ Current Mass Mailings:
 		      <td> 
 		      <p>
 		       <strong> 
-		        <!-- tmpl_var list_name escape="HTML" --> 
+		        <!-- tmpl_var list_name escape="HTML" --> (<!-- tmpl_var list escape="HTML" --> )
 		       </strong> 
 		      </p>
 		     </td>
