--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -764,255 +764,267 @@ editors also have the ability to make simple HTML tables for basic layouts.
 <fieldset> 
 	<legend>Advanced Configuration (Optional)</legend>
 
+	<!-- tmpl_if show_annoying_whiny_pro_dada_notice --> 
+		<!-- tmpl_include upgrade_to_pro_dada.tmpl --> 
+	<!-- /tmpl_if -->
+
+	<!-- tmpl_if show_profiles --> 
+		<p>
+			<input type="checkbox" name="configure_profiles" id="configure_profiles" value="1" />			
+		<label for="configure_profiles">
+			Configure Profiles
+		</label>
+		</p>
+	
+		<div id="profiles_options">
+		<fieldset> 
+			<p>
+				<input type="checkbox" name="profiles_enabled" id="profiles_enabled" value="1" checked="checked" />			
+			<label for="profiles_enabled">Enable Profiles</label>
+			</p>
+		
+			<p>
+			<label for="profiles_profile_email">Profile Administration Email:</label>
+			<input type="text" name="profiles_profile_email" id="profiles_profile_email" value="" class="midi"/>			
+			</p>
+
+	
+		
+			<h2>
+				Enabled Features:
+			</h2>
+		
+
+		
+		
+			<p>
+				<input type="checkbox" name="profiles_enable_captcha" id="profiles_enable_captcha" value="1" checked="checked" />			
+			<label for="profiles_enable_captcha">CAPTCHA</label>
+			</p>
+		
+			<p>
+			<input type="checkbox" name="profiles_enable_magic_subscription_forms" id="profiles_enable_magic_subscription_forms" value="1" checked="checked" />				
+			<label for="profiles_enable_magic_subscription_forms">Magic Subscription Forms:</label>
+			</p>
+		
+			<p>
+				<input type="checkbox" name="profiles_help" id="profiles_help" value="1" checked="checked" />			
+			<label for="profiles_help">Help Screen</label>
+			</p>
+
+			<p>
+				<input type="checkbox" name="profiles_login" id="profiles_login" value="1" checked="checked" />			
+			<label for="profiles_login">Profile Login</label>
+			</p>
+
+			<p>
+				<input type="checkbox" name="profiles_register" id="profiles_register" value="1" checked="checked" />			
+			<label for="profiles_register">Profile Registration</label>
+			</p>
+
+			<p>
+				<input type="checkbox" name="profiles_password_reset" id="profiles_password_reset" value="1" checked="checked" />			
+			<label for="profiles_password_reset">Password Reset</label>
+			</p>
+
+			<p>
+				<input type="checkbox" name="profiles_profile_fields" id="profiles_profile_fields" value="1" checked="checked" />			
+			<label for="profiles_profile_fields">Profile Fields</label>
+			</p>
+
+			<p>
+				<input type="checkbox" name="profiles_mailing_list_subscriptions" id="profiles_mailing_list_subscriptions" value="1" checked="checked" />			
+			<label for="profiles_mailing_list_subscriptions">Mailing List Subscriptions</label>
+			</p>
+
+			<p>
+				<input type="checkbox" name="profiles_protected_directories" id="profiles_protected_directories" value="1" checked="checked" />			
+			<label for="profiles_protected_directories">Password Protected Directory Information</label>
+			</p>
+
+			<p>
+				<input type="checkbox" name="profiles_update_email_address" id="profiles_update_email_address" value="1" checked="checked" />			
+			<label for="profiles_update_email_address">Update Email Address</label>
+			</p>
+		
+		
+			<p>
+				<input type="checkbox" name="profiles_change_password" id="profiles_change_password" value="1" checked="checked" />			
+			<label for="profiles_change_password">Change Password</label>
+			</p>
+		
+		
+		
+
+
+			<p>
+				<input type="checkbox" name="profiles_delete_profile" id="profiles_delete_profile" value="1" checked="checked" />			
+			<label for="profiles_delete_profile">Profile Deletion</label>
+			</p>
+		
+		</fieldset>
+	</div> 
+<!-- /tmpl_if --> 
+
+
+
+<!-- tmpl_if show_global_template_options --> 
 
 	<p>
-		<input type="checkbox" name="configure_profiles" id="configure_profiles" value="1" />			
-	<label for="configure_profiles">
-		Configure Profiles
-	</label>
+		<input type="checkbox" name="configure_templates" id="configure_templates" value="1" />			
+	<label for="configure_templates">Configure Global Template Options</label>
 	</p>
-	
-	<div id="profiles_options">
+
+
+	<div id="template_options">
 	<fieldset> 
 		<p>
-			<input type="checkbox" name="profiles_enabled" id="profiles_enabled" value="1" checked="checked" />			
-		<label for="profiles_enabled">Enable Profiles</label>
+			<input type="checkbox" name="configure_user_template" id="configure_user_template" value="1" />			
+			<label for="configure_user_template">
+				Set a Global, User-Facing Template
+			</label>
 		</p>
-		
-		<p>
-		<label for="profiles_profile_email">Profile Administration Email:</label>
-		<input type="text" name="profiles_profile_email" id="profiles_profile_email" value="" class="midi"/>			
-		</p>
-
 	
-		
-		<h2>
-			Enabled Features:
-		</h2>
-		
+		<p>
+			<label for="template_options_USER_TEMPLATE">
+				Server Absolute Path or URL to your User Template:
+			</label>
+			<br />
+			<input type="text" name="template_options_USER_TEMPLATE" id="template_options_USER_TEMPLATE" value="" class="full" />
+		</p>
+		<div class="buttonfloat"> 
+		<p>
+			<input type="button" class="processing test_user_template" value="Test Your User Template"/>
+		</p>
+	
+		</div>
+		<div class="floatclear"></div> 
+		<div id="test_user_template_results" class="clearskiesbox"></div> 
+	
+	
+	</fieldset> 	
+	</div> 
+	<!-- /tmpl_if --> 
 
-		
-		
-		<p>
-			<input type="checkbox" name="profiles_enable_captcha" id="profiles_enable_captcha" value="1" checked="checked" />			
-		<label for="profiles_enable_captcha">CAPTCHA</label>
-		</p>
-		
-		<p>
-		<input type="checkbox" name="profiles_enable_magic_subscription_forms" id="profiles_enable_magic_subscription_forms" value="1" checked="checked" />				
-		<label for="profiles_enable_magic_subscription_forms">Magic Subscription Forms:</label>
-		</p>
-		
-		<p>
-			<input type="checkbox" name="profiles_help" id="profiles_help" value="1" checked="checked" />			
-		<label for="profiles_help">Help Screen</label>
-		</p>
 
-		<p>
-			<input type="checkbox" name="profiles_login" id="profiles_login" value="1" checked="checked" />			
-		<label for="profiles_login">Profile Login</label>
-		</p>
+	<!-- tmpl_if show_security_options --> 
 
+	<p>
+		<input type="checkbox" name="configure_security" id="configure_security" value="1" />			
+	<label for="configure_security">Configure Security Options</label>
+	</p>
+	<div id="security_options">
+	<fieldset> 
 		<p>
-			<input type="checkbox" name="profiles_register" id="profiles_register" value="1" checked="checked" />			
-		<label for="profiles_register">Profile Registration</label>
+			<input type="checkbox" name="security_no_show_admin_link" id="security_no_show_admin_link" value="1" />			
+			<label for="security_no_show_admin_link">Hide Administration Link</label>
 		</p>
-
 		<p>
-			<input type="checkbox" name="profiles_password_reset" id="profiles_password_reset" value="1" checked="checked" />			
-		<label for="profiles_password_reset">Password Reset</label>
+			<input type="checkbox" name="security_DISABLE_OUTSIDE_LOGINS" id="security_DISABLE_OUTSIDE_LOGINS" value="1" />			
+			<label for="security_DISABLE_OUTSIDE_LOGINS">Disable Outside Logins</label>
 		</p>
-
+	
 		<p>
-			<input type="checkbox" name="profiles_profile_fields" id="profiles_profile_fields" value="1" checked="checked" />			
-		<label for="profiles_profile_fields">Profile Fields</label>
+		<label for="security_ADMIN_FLAVOR_NAME">Admin Flavor Name:</label>
+		<input type="text" name="security_ADMIN_FLAVOR_NAME" id="security_ADMIN_FLAVOR_NAME" value="" />			
 		</p>
 
 		<p>
-			<input type="checkbox" name="profiles_mailing_list_subscriptions" id="profiles_mailing_list_subscriptions" value="1" checked="checked" />			
-		<label for="profiles_mailing_list_subscriptions">Mailing List Subscriptions</label>
+		<label for="security_SIGN_IN_FLAVOR_NAME">Sign In Flavor Name:</label>
+		<input type="text" name="security_SIGN_IN_FLAVOR_NAME" id="security_SIGN_IN_FLAVOR_NAME" value="" />			
+		</p>
+	
+	</fieldset> 	
+	</div> 
+<!-- /tmpl_if --> 
+
+<!-- tmpl_if show_global_mass_mailing_options --> 
+
+	<p>
+		<input type="checkbox" name="configure_mass_mailing" id="configure_mass_mailing" value="1" />			
+	<label for="configure_mass_mailing">Configure Global Mass Mailing Options</label>
+	</p>
+	<div id="mass_mailing_options">
+	<fieldset> 
+	
+		<p>
+			<label for="mass_mailing_MAILOUT_AT_ONCE_LIMIT">
+				Mass Mailings at Once Limit: 
+			</label>
+			<select name="mass_mailing_MAILOUT_AT_ONCE_LIMIT" id="mass_mailing_MAILOUT_AT_ONCE_LIMIT">
+				<option value="1">1</option> 
+				<option value="2">2</option> 
+				<option value="3">3</option> 
+				<option value="4">4</option> 
+				<option value="5">5</option> 
+				<option value="6">6</option> 
+				<option value="7">7</option> 
+				<option value="8">8</option> 
+				<option value="9">9</option> 
+				<option value="10">10</option> 
+			</select>
 		</p>
 
 		<p>
-			<input type="checkbox" name="profiles_protected_directories" id="profiles_protected_directories" value="1" checked="checked" />			
-		<label for="profiles_protected_directories">Password Protected Directory Information</label>
+			<input type="checkbox" name="mass_mailing_MULTIPLE_LIST_SENDING" id="mass_mailing_MULTIPLE_LIST_SENDING" value="1" />
+			<label for="mass_mailing_MULTIPLE_LIST_SENDING">Multiple Mailing List Sending</label>
+		</p>
+	
+		<p>
+			<label for="mass_mailing_MAILOUT_STALE_AFTER">
+				Mass Mailings Stale After: 
+			</label>
+			<select name="mass_mailing_MAILOUT_STALE_AFTER" id="mass_mailing_MAILOUT_STALE_AFTER">
+				<option value="21600">6 hours</option>
+				<option value="43200">12 hours</option>
+				<option value="86400" selected="selected">1 Day</option> 
+				<option value="172800">2 Days</option> 
+				<option value="259200">3 Days</option>
+			</select>
+		</p>
+	</fieldset> 	
+	</div> 
+<!-- /tmpl_if --> 
+
+<!-- tmpl_if show_amazon_ses_options --> 
+
+	<p>
+		<input type="checkbox" name="configure_amazon_ses" id="configure_amazon_ses" value="1" />			
+	<label for="configure_amazon_ses">Configure Amazon SES</label>
+	</p>
+	<div id="amazon_ses_options">
+	<fieldset> 
+	
+		<!-- tmpl_var amazon_ses_requirements_widget -->
+
+		<p>
+			<label style="width: 18em;float: left;text-align: right;margin-right: 0.5em;display: block" for="amazon_ses_AWSAccessKeyId">
+				AWS Access Key ID:
+			</label> 
+			<input type="text" name="amazon_ses_AWSAccessKeyId" id="amazon_ses_AWSAccessKeyId" value="" class="midi" />
 		</p>
 
 		<p>
-			<input type="checkbox" name="profiles_update_email_address" id="profiles_update_email_address" value="1" checked="checked" />			
-		<label for="profiles_update_email_address">Update Email Address</label>
+			<label style="width: 18em;float: left;text-align: right;margin-right: 0.5em;display: block" for="amazon_ses_AWSSecretKey">
+				AWS Secret Access Key:
+			</label> 
+			<input type="text" name="amazon_ses_AWSSecretKey" id="amazon_ses_AWSSecretKey" value=""  class="midi" />
 		</p>
-		
-		
+		<div class="buttonfloat"> 
 		<p>
-			<input type="checkbox" name="profiles_change_password" id="profiles_change_password" value="1" checked="checked" />			
-		<label for="profiles_change_password">Change Password</label>
+			<input type="button" class="processing test_amazon_ses_configuration" value="Test Your AWS Credentials"/>
 		</p>
-		
-		
-		
-
-
-		<p>
-			<input type="checkbox" name="profiles_delete_profile" id="profiles_delete_profile" value="1" checked="checked" />			
-		<label for="profiles_delete_profile">Profile Deletion</label>
-		</p>
-		
-	</fieldset>
-</div> 
-
-
-
-<p>
-	<input type="checkbox" name="configure_templates" id="configure_templates" value="1" />			
-<label for="configure_templates">Configure Global Template Options</label>
-</p>
-
-
-<div id="template_options">
-<fieldset> 
-	<p>
-		<input type="checkbox" name="configure_user_template" id="configure_user_template" value="1" />			
-		<label for="configure_user_template">
-			Set a Global, User-Facing Template
-		</label>
-	</p>
 	
-	<p>
-		<label for="template_options_USER_TEMPLATE">
-			Server Absolute Path or URL to your User Template:
-		</label>
-		<br />
-		<input type="text" name="template_options_USER_TEMPLATE" id="template_options_USER_TEMPLATE" value="" class="full" />
-	</p>
-	<div class="buttonfloat"> 
-	<p>
-		<input type="button" class="processing test_user_template" value="Test Your User Template"/>
-	</p>
-	
-	</div>
-	<div class="floatclear"></div> 
-	<div id="test_user_template_results" class="clearskiesbox"></div> 
+		</div>
+		<div class="floatclear"></div> 
 	
 	
-</fieldset> 	
-</div> 
-
-
-
-<p>
-	<input type="checkbox" name="configure_security" id="configure_security" value="1" />			
-<label for="configure_security">Configure Security Options</label>
-</p>
-<div id="security_options">
-<fieldset> 
-	<p>
-		<input type="checkbox" name="security_no_show_admin_link" id="security_no_show_admin_link" value="1" />			
-		<label for="security_no_show_admin_link">Hide Administration Link</label>
-	</p>
-	<p>
-		<input type="checkbox" name="security_DISABLE_OUTSIDE_LOGINS" id="security_DISABLE_OUTSIDE_LOGINS" value="1" />			
-		<label for="security_DISABLE_OUTSIDE_LOGINS">Disable Outside Logins</label>
-	</p>
-	
-	<p>
-	<label for="security_ADMIN_FLAVOR_NAME">Admin Flavor Name:</label>
-	<input type="text" name="security_ADMIN_FLAVOR_NAME" id="security_ADMIN_FLAVOR_NAME" value="" />			
-	</p>
-
-	<p>
-	<label for="security_SIGN_IN_FLAVOR_NAME">Sign In Flavor Name:</label>
-	<input type="text" name="security_SIGN_IN_FLAVOR_NAME" id="security_SIGN_IN_FLAVOR_NAME" value="" />			
-	</p>
-	
-</fieldset> 	
-</div> 
-
-<p>
-	<input type="checkbox" name="configure_mass_mailing" id="configure_mass_mailing" value="1" />			
-<label for="configure_mass_mailing">Configure Global Mass Mailing Options</label>
-</p>
-<div id="mass_mailing_options">
-<fieldset> 
-	
-	<p>
-		<label for="mass_mailing_MAILOUT_AT_ONCE_LIMIT">
-			Mass Mailings at Once Limit: 
-		</label>
-		<select name="mass_mailing_MAILOUT_AT_ONCE_LIMIT" id="mass_mailing_MAILOUT_AT_ONCE_LIMIT">
-			<option value="1">1</option> 
-			<option value="2">2</option> 
-			<option value="3">3</option> 
-			<option value="4">4</option> 
-			<option value="5">5</option> 
-			<option value="6">6</option> 
-			<option value="7">7</option> 
-			<option value="8">8</option> 
-			<option value="9">9</option> 
-			<option value="10">10</option> 
-		</select>
-	</p>
-
-	<p>
-		<input type="checkbox" name="mass_mailing_MULTIPLE_LIST_SENDING" id="mass_mailing_MULTIPLE_LIST_SENDING" value="1" />
-		<label for="mass_mailing_MULTIPLE_LIST_SENDING">Multiple Mailing List Sending</label>
-	</p>
-	
-	<p>
-		<label for="mass_mailing_MAILOUT_STALE_AFTER">
-			Mass Mailings Stale After: 
-		</label>
-		<select name="mass_mailing_MAILOUT_STALE_AFTER" id="mass_mailing_MAILOUT_STALE_AFTER">
-			<option value="21600">6 hours</option>
-			<option value="43200">12 hours</option>
-			<option value="86400" selected="selected">1 Day</option> 
-			<option value="172800">2 Days</option> 
-			<option value="259200">3 Days</option>
-		</select>
-	</p>
-</fieldset> 	
-</div> 
-
-
-
- 
-
-<p>
-	<input type="checkbox" name="configure_amazon_ses" id="configure_amazon_ses" value="1" />			
-<label for="configure_amazon_ses">Configure Amazon SES</label>
-</p>
-<div id="amazon_ses_options">
-<fieldset> 
-	
-	<!-- tmpl_var amazon_ses_requirements_widget -->
-
-	<p>
-		<label style="width: 18em;float: left;text-align: right;margin-right: 0.5em;display: block" for="amazon_ses_AWSAccessKeyId">
-			AWS Access Key ID:
-		</label> 
-		<input type="text" name="amazon_ses_AWSAccessKeyId" id="amazon_ses_AWSAccessKeyId" value="" class="midi" />
-	</p>
-
-	<p>
-		<label style="width: 18em;float: left;text-align: right;margin-right: 0.5em;display: block" for="amazon_ses_AWSSecretKey">
-			AWS Secret Access Key:
-		</label> 
-		<input type="text" name="amazon_ses_AWSSecretKey" id="amazon_ses_AWSSecretKey" value=""  class="midi" />
-	</p>
-	<div class="buttonfloat"> 
-	<p>
-		<input type="button" class="processing test_amazon_ses_configuration" value="Test Your AWS Credentials"/>
-	</p>
-	
-	</div>
-	<div class="floatclear"></div> 
+		<div id="test_amazon_ses_configuration_results" class="clearskiesbox"></div> 
 	
 	
-	<div id="test_amazon_ses_configuration_results" class="clearskiesbox"></div> 
-	
-	
-</fieldset> 	
-</div> 
+	</fieldset> 	
+	</div> 
+<!-- /tmpl_if --> 
 
 </fieldset> 
 
