--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -37,7 +37,8 @@
 
 
 <!-- tmpl_if EXPR="(type eq 'list')" -->
-			
+	
+	
 	<!-- tmpl_if subscription_quota_reached -->
 		<div class="badweatherbox">
 		<p>
@@ -48,6 +49,10 @@
 		 You may not subscribe any more.
 		</p>
 		</div>
+		
+		<!-- tmpl_if expr="(num_subscribers >= SUBSCRIPTION_QUOTA)" --> 
+			<!-- tmpl_include upgrade_to_pro_dada.tmpl -->
+		<!-- /tmpl_if --> 
 		
 	<!--tmpl_else-->
 	
