slight change in options

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -576,6 +576,11 @@ for it to work correctly. For help on setting the cronjob, see the
 				<option value="3145728">3 Megabytes</option> 
 				<option value="4194304">4 Megabytes</option> 
 				<option value="5242880">5 Megabytes</option> 
+				<option value="6291456">6 Megabytes</option> 
+				<option value="7340032">7 Megabytes</option> 
+				<option value="8388608">8 Megabytes</option> 
+				<option value="9437184">9 Megabytes</option> 
+				<option value="10485760">10 Megabytes</option>
 			</select>
 		</p>
 
