--- a/dada/templates/amazon_ses_verify_email_widget.tmpl
+++ b/dada/templates/amazon_ses_verify_email_widget.tmpl
@@ -1,3 +1,5 @@
+<!-- begin amazon_ses_verify_email_widget --> 
+
 <!-- tmpl_if valid_email -->
 	<!-- tmpl_if expr="(status == 200)" --> 
 		<div class="clearskiesbox">		
@@ -23,3 +25,4 @@
 	</div>
 <!-- /tmpl_if --> 
 
+<!-- end amazon_ses_verify_email_widget --> 
