--- a/dada/templates/membership.tmpl
+++ b/dada/templates/membership.tmpl
@@ -4,10 +4,16 @@
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
-		Membership &#187; <!-- tmpl_var email -->
+		<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_list">
+			Membership
+		</a>
+		 &#187; <!-- tmpl_var email -->
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
+
+<div id="membership"></div> 
+
 <form> 
 	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" /> 
 	<input type="hidden" id="email"         name="email"         value="<!-- tmpl_var email -->" /> 
@@ -31,24 +37,7 @@
 
 	<!-- tmpl_include view_list_modalmenu_widget.tmpl -->
 
-	<!-- tmpl_if list_settings.enable_subscription_approval_step -->
-		<!-- tmpl_if subscribed_to_sub_request_list --> 
-	
-			<fieldset>
-			<legend>Subscription Requests</legend>
-			<p><!-- tmpl_var email --> has requested to be Subscribed to your Mailing List.</p>
-			<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
-				<input type="hidden" name="f"       value="subscription_requests" />
-				<input type="hidden" name="type" value="sub_request_list" />
-				<input type="hidden" name="address" value="<!-- tmpl_var email -->" />
-				<input type="hidden" name="return_to" value="membership" />
-				<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" />
-				<input type="submit" name="process"  class="plain" value="Approve Subscription Request" />
-				<input type="submit" name="process"  class="plain" value="Deny Subscription Request" />
-			</form>
-			</fieldset>
-		<!-- /tmpl_if -->
-	<!-- /tmpl_if -->
+
 
 	<fieldset> 
 	<legend><!-- tmpl_var email --> Membership</legend>
@@ -72,9 +61,29 @@
 
 
 
+	<!-- tmpl_if list_settings.enable_subscription_approval_step -->
+		<!-- tmpl_if subscribed_to_sub_request_list --> 
+			<fieldset>
+			<legend>Subscription Requests</legend>
+			<p><!-- tmpl_var email --> has requested to be Subscribed to your Mailing List.</p>
+			<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+				<input type="hidden" name="f"       value="subscription_requests" />
+				<input type="hidden" name="type" value="sub_request_list" />
+				<input type="hidden" name="address" value="<!-- tmpl_var email -->" />
+				<input type="hidden" name="return_to" value="membership" />
+				<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" />
+				<input type="submit" name="process"  class="plain" value="Approve Subscription Request" />
+				<input type="submit" name="process"  class="plain" value="Deny Subscription Request" />
+			</form>
+			</fieldset>
+		<!-- /tmpl_if -->
+	<!-- /tmpl_if -->
+	
 
+<!-- tmpl_if add_to_num --> 
 
-	<!-- tmpl_if add_to_num --> 
+	<fieldset>
+	<legend>Add</legend>
 
 		<form  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 			<input type="hidden" name="email" value="<!-- tmpl_var email -->" />
@@ -84,12 +93,48 @@
 			<input type="hidden" name="method" value="via_add_one" />
 			<input type="hidden" name="return_to" value="membership" />
 			<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" />
-
-		
-		<p><label for="type_add">&#8594; Add</label> address to: <!-- tmpl_var add_to_popup_menu --><input type="submit" value="Add"  class="plain"  /></p>
+			<p>
+				<label for="type_add">
+					&#8594; Add
+				</label>
+				address to: <!-- tmpl_var add_to_popup_menu -->
+				<input type="submit" value="Add"  class="plain"  />
+			</p>
 		</form>
-	<!-- /tmpl_if --> 
+	</fieldset>
+<!-- /tmpl_if --> 
 
+<fieldset> 
+	
+	<legend>Update</legend>
+	
+	<!-- tmpl_if member_of_num --> 
+	
+	<form action="<!-- tmpl_var S_PROGRAM_URL -->" id="update_email_form" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+		<input type="hidden" name="original_email" id="original_email" value="<!-- tmpl_var email -->" />
+	<p>
+		<label for="updated_email">
+			&#8596; Update
+		</label> address to:
+		
+		<input type="text" id="updated_email" name="updated_email" value="<!-- tmpl_var email -->" class="midi" />
+		<input type="button" value="Update..." class="cautionary" id="validate_update_email" class="midi" />
+		
+		<!-- tmpl_if root_login -->
+			<!-- tmpl_if can_have_subscriber_fields -->
+				<input type="button" value="Update on All Mailing Lists..." class="cautionary" id="validate_update_email_for_all_mailing_lists" />
+			<!-- /tmpl_if -->
+		<!-- /tmpl_if --> 
+		
+	</form> 
+	
+	<!-- /tmpl_if -->
+
+</fieldset> 
+
+<fieldset>
+	<legend>Remove</legend>
+	
 	<!-- tmpl_if remove_from_num --> 
 
 		<form  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
@@ -99,15 +144,20 @@
 		<input type="hidden" name="f"       value="remove_subscribers" />	
 		<input type="hidden" name="return_to" value="membership" />
 		<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" />
-	
-		<p><label for="type_remove">&#8592;  Remove</label> address from: <!-- tmpl_var remove_from_popup_menu --><input type="submit" value="Remove"  class="plain"  /></p>
+		<p>
+			<label for="type_remove">&#8592;  Remove</label> address from: <!-- tmpl_var remove_from_popup_menu -->
+			<input type="submit" value="Remove" class="cautionary"  />
+			<!-- tmpl_if root_login -->
+				<input type="button" id="remove_from_multiple_lists_button" value="Remove on Multiple Mailing Lists..." class="cautionary"  />
+			<!-- /tmpl_if -->
+			</p>
 		</form>
 	
 		<!-- tmpl_if subscribed_to_list -->
 			<!-- tmpl_if list_settings.black_list -->
 				<!-- tmpl_if list_settings.add_unsubs_to_black_list -->
 					<p class="alert">
-						Subscribers that are unsubscribed will be added to the Black List.
+						Subscribers that are unsubscribed from this mailing list will be added to the Black List.
 					</p>
 				<!-- /tmpl_if -->
 			<!-- /tmpl_if -->
@@ -115,54 +165,48 @@
 
 
 	<!-- /tmpl_if --> 
+</fieldset> 
 
-	<!-- tmpl_if member_of_num --> 
-		<fieldset> 
-		<legend>Update Address</legend>
-
-		<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" onSubmit="updateEmail();return false">
-			<input type="hidden" name="original_email" id="original_email" value="<!-- tmpl_var email -->" />
-			<p>	
-			<label for="updated_email">New Address:</label> <input type="text" id="updated_email" name="updated_email" value="<!-- tmpl_var email -->" class="midi" />
-			</p>
-			<!-- tmpl_if can_have_subscriber_fields --> 
-	
-				<p>
-					<input type="checkbox" name="for_all_mailing_lists" id="for_all_mailing_lists" value="1" <!-- tmpl_unless root_login -->disabled="disabled"<!-- /tmpl_unless --> />
-					<label for="for_all_mailing_lists">Update for All Mailing Lists <!-- tmpl_unless root_login --></label> <span class="error">(Requires <!-- tmpl_var PROGRAM_NAME --> Root Login)<!--/tmpl_unless --></span>
-				</p>
-	
-			<!-- tmpl_else --> 
-				<input type="hidden" name="for_all_mailing_lists" id="for_all_mailing_lists" value="0"  />
+	<fieldset> 
 		
-			<!-- /tmpl_if --> 
-	
-			 <div class="buttonfloat">	 
-			<input type="button" value="Validate..." class="cautionary" onclick="updateEmail();return false;" />
-		</div> 
-			<div class="floatclear"></div>
-	
-		</form> 
+	<legend>Membership History</legend> 
+	<p>
+		<!-- tmpl_if root_login --> 		
+			<form id="toggle_membership_history"> 
+				
+				<input type="hidden" name="flavor" value="mailing_list_history" /> 
+				<input type="hidden" name="mode" value="export_csv" /> 				
+				<input type="hidden" name="email" value="<!-- tmpl_var email -->" /> 
+				
+				
+				<p>
+				<input type="radio" id="membership_history_this_list" name="membership_history" value="this_list" class="radio_toggle_membership_history" checked="checked" />
+				<label for="membership_history_this_list">
+					For, "<!-- tmpl_var list_settings.list_name --> (<!-- tmpl_var list_settings.list -->)
+				</label> 
+				<input type="radio" id="membership_history_all_lists" name="membership_history" class="radio_toggle_membership_history" value="all_lists" />
+				<label for="membership_history_all_lists">
+	 				For All Mailing Lists
+				</label>
+				</p>
+				
+				<div>
+				<div style="height: 300px; overflow: auto;border:1px solid black;background:#fff">
+					<div id="mailing_list_history_loading"></div>
+					<div id="mailing_list_history"></div>
+				</div>
+				</div>  
+				
+				
+				
+				<div class="buttonfloat"> 
+					<input type="submit" value="Export (csv)" class="processing" />
+				</div> 
+				<div class="floatclear"></div>
+			</form>
+		<!-- /tmpl_if -->
 
-		<div id="update_email_results_loading"><p class="alert">&nbsp;</p></div>
-		<div id="update_email_results"  style="display:none"></div> 
-
-		</fieldset> 
-	<!-- /tmpl_if -->
-
-
-
-	</fieldset> 
-
-
-	<h1>Mailing List History</h1> 
-	<div>
-	<div style="height: 300px; overflow: auto;border-top:1px solid black;border-bottom:1px solid black">
-		<div id="mailing_list_history_loading"></div>
-		<div id="mailing_list_history"></div>
-	</div>
-	</div>  
-	
+</fieldset> 
 
 
 	<!-- tmpl_if can_have_subscriber_fields --> 
