--- a/dada/templates/membership.tmpl
+++ b/dada/templates/membership.tmpl
@@ -19,16 +19,6 @@
 	<input type="hidden" id="email"         name="email"         value="<!-- tmpl_var email -->" /> 
 </form> 
 
-<!-- tmpl_unless is_valid_email --> 
-<div class="badweatherbox">
-	<p>
-		<strong>
-			<!-- tmpl_var email escape="HTML" -->
-		</strong> 
-		is not a valid email address.
-</div> 
-
-<!-- tmpl_else --> 
 
 	<!-- tmpl_if done -->
 		<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
@@ -89,20 +79,19 @@
 	<fieldset>
 	<legend>Add</legend>
 
-		<form  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-			<input type="hidden" name="email" value="<!-- tmpl_var email -->" />
-			<input type="hidden" name="f"    id="f" value="add" />
-			<input type="hidden" name="process" value="1" />
-			<input type="hidden" name="rand_string" id="rand_string" value="<!-- tmpl_var rand_string -->" />
-			<input type="hidden" name="method" value="via_add_one" />
-			<input type="hidden" name="return_to" value="membership" />
-			<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" />
+		<form  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" id="add_email_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+			<input type="hidden" name="email" value="<!-- tmpl_var email -->" id="add_email" />
+			<input type="hidden" name="process" value="1" id="add_process"/>
+			<input type="hidden" name="rand_string" id="add_rand_string" value="<!-- tmpl_var rand_string -->" />
+			<input type="hidden" name="method" value="via_add_one" id="add_method" />
+			<input type="hidden" name="return_to" value="membership" id="add_return_to" />
+			<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" id="add_return_address" />
 			<p>
 				<label for="type_add">
 					&#8594; Add
 				</label>
 				address to: <!-- tmpl_var add_to_popup_menu -->
-				<input type="submit" value="Add"  class="plain"  />
+				<input type="button" value="Add..."  class="processing"  id="validate_add_email" />
 			</p>
 		</form>
 	</fieldset>
@@ -312,10 +301,6 @@
 			<!-- /tmpl_if --> 
 
 	<!-- /tmpl_if --> 
-
-
-<!-- /tmpl_unless --> 
-
 
 	<p>
 	 <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_list;type=<!-- tmpl_var type -->;page=<!-- tmpl_var page -->;query=<!-- tmpl_var query -->;order_by=<!-- tmpl_var order_by -->;order_dir=<!-- tmpl_var order_dir -->">&lt;&lt; Back</a>
