--- a/dada/templates/validate_remove_email_widget.tmpl
+++ b/dada/templates/validate_remove_email_widget.tmpl
@@ -56,4 +56,13 @@
 	</div> 
 	<div class="floatclear"></div>
 </form> 
+
+<!-- tmpl_if comment --> 
+
+	<pre>
+	<!-- tmpl_var subscribed_lists_dump --> 
+	</pre> 
+
+<!-- /tmpl_if --> 
+
 <!-- end validate_remove_email_widget.tmpl --> 
