--- a/dada/templates/view_list_table_widget.tmpl
+++ b/dada/templates/view_list_table_widget.tmpl
@@ -116,18 +116,12 @@
 	<td>
 	     <p>
 		
-	 	
-		<!-- tmpl_if expr="(type eq 'bounced_list')" -->
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_bounce_history;email=<!-- tmpl_var email ESCAPE=URL -->" title="Bounce Log for <!-- tmpl_var email escape=HTML -->" class="modalbox" rel="bounces">
-			 <!-- tmpl_var email -->
-		    </a>
-		<!-- /tmpl_if --> 
-		<!-- tmpl_if expr="((no_email_links) != 1 && (type ne 'bounced_list'))" -->
+		<!-- tmpl_if expr="(no_email_links != 1)" -->
 			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership;email=<!-- tmpl_var email ESCAPE=URL -->;type=<!-- tmpl_var type ESCAPE=URL -->;page=<!-- tmpl_var page ESCAPE=URL -->;order_by=<!-- tmpl_var order_by ESCAPE=URL -->;order_dir=<!-- tmpl_var order_dir ESCAPE=URL -->;query=<!-- tmpl_var query ESCAPE=URL -->" >
 				<!-- tmpl_var email --> 
 			</a>
 		<!-- /tmpl_if -->
-		<!-- tmpl_if expr="((no_email_links) == 1 && (type ne 'bounced_list'))" -->		
+		<!-- tmpl_if expr="(no_email_links == 1)" -->		
 				<!-- tmpl_var email --> 
 		<!-- /tmpl_if -->
  	 	</p>
